--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Fetch API - Post</title>
 </head>
 <body>
-    
+    <main class="container">
+        <h1>Fetch API - Post</h1>
+        <hr>
+
+        <form action="" id="fetchForm">
+            <div class="form-group"></div>
+
+            <div class="form-group"></div>
+
+            <input type="submit" value="submit" class="btn btn-primary">
+        </form>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
