--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
         <hr>
 
         <form action="" id="fetchForm">
-            <div class="form-group"></div>
+            <div class="form-group">
+                <label for="titleInput">Title</label>
+                <input 
+                    type="text" 
+                    name="titleInput" 
+                    id="titleInput"
+                    class="form-control" 
+                    placeholder="Enter title here"
+                >
+            </div>
 
             <div class="form-group"></div>
 
