--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
                 >
             </div>
 
-            <div class="form-group"></div>
+            <div class="form-group">
+                <label for="bodyInput">Body</label>
+                <textarea 
+                    name="bodyInput" 
+                    id="bodyInput" 
+                    class="form-control" rows="3" 
+                    placeholder="Enter Post Body Here"></textarea>
+            </div>
 
             <input type="submit" value="submit" class="btn btn-primary">
         </form>
