--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
                     placeholder="Enter Post Body Here"></textarea>
             </div>
 
-            <input type="submit" value="submit" class="btn btn-primary">
+            <input 
+                type="submit" 
+                value="submit" 
+                class="btn btn-primary"
+            >
         </form>
+        <hr>
+        <div class="card">
+            <div class="card-body"></div>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+        </div>
     </main>
 
     <script src="script.js"></script>
